# demos

./: .gitignore
asm/: aarch64.c  aarch64.s  build-aarch64.sh
common/: timer.h
common/c_cpp/: CMakeLists.txt  com_base.hh  com_hash.cc  com_hash.hh  com_timer.h
common/images/: credits.txt
hash/: CMakeLists.txt  hash.cc  md5_pseudocode_wikipedia.txt
win32/: build.bat  build.sh  win32_threading.c  win32_windows.c
win32_threading/: build.bat  win32_threading.c
win32_windows/: build.sh  win32_windows.c
yuvbench/: CMakeLists.txt  build.sh  yuv-from-image.py  yuvbench.c  yuvbench.cc  yuvbench.h  yuvbench.hh  yuvbench_corevideo.c  yuvbench_corevideo.cc  yuvbench_naive.c  yuvbench_naive.cc  yuvbench_swscale.c  yuvbench_swscale.cc  yuvbench_vulkan.c  yuvbench_vulkan.cc
yuvbench/images/: convert.py
